--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -10,45 +10,39 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ajusa/lit@latest/dist/lit.css" />
   <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
   <style>
-   #pwd {
-     border: none;
-     font-size:16px
-   }
-  </style
+    #pwd {
+      border: none;
+      font-size: 16px
+    }
+  </style>
 </head>
+
 <body>
   <div id="app" class="c">
     <div class="card">
-       <h4>Generate Password</h4>
-       <div class="row">
-         Length
-         <select v-model="lengthStr">
-           <option value="16">16</option>
-           <option value="17">17</option>
-           <option value="18">18</option>
-           <option value="19">19</option>
-           <option value="20">20</option>
-         </select>
-       </div>
-       <div class="row">
-         Character set
-         <select v-model="charset">
-           <option value="azAZ">Letters</option>
-           <option value="azAZ09">Letters and Numbers</option>
-           <option value="azAZ09Special">Letters, Numbers & Special Characters</option>
-         </select>
-       </div>
-       <div class="row">
-         <p v-if="password"><input id="pwd" readonly v-model="password" :size="parseInt(lengthStr) + 5" /> <a class="btn" v-on:click="copy">Copy</a></p>
-       </div>
-       <div class="row">
-         <button class="btn" v-on:click="generate">Generate</button>
-       </div>
+      <h4>Generate Password</h4>
+      <div class="row">Length <select v-model="lengthStr" @change="onChange()">
+          <option value="16">16</option>
+          <option value="17">17</option>
+          <option value="18">18</option>
+          <option value="19">19</option>
+          <option value="20">20</option>
+        </select></div>
+      <div class="row">Character set <select v-model="charset" @change="onChange()">
+          <option value="azAZ">Letters</option>
+          <option value="azAZ09">Letters and Numbers</option>
+          <option value="azAZ09Special">Letters,
+            Numbers & Special Characters</option>
+        </select></div>
+      <div class="row">
+        <p v-if="password"><input id="pwd" readonly v-model="password" :size="parseInt(lengthStr) + 5" /><a class="btn"
+            v-on:click="copy">Copy</a></p>
+      </div>
+      <div class="row"><button class="btn" v-on:click="generate">Generate</button></div>
     </div>
   </div>
 
   <script>
-  
     // the number of characters to encode by
     const charsets = {
       azAZ: 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz'.split(''),
@@ -60,29 +54,33 @@
       data: {
         password: null,
         lengthStr: '20',
-        charset: 'azAZ09'       
+        charset: 'azAZ09'
       },
-      mounted: function() {
+      mounted: function () {
         this.generate()
       },
       methods: {
-        generate: function() {
+        generate: function () {
           let str = ''
           let cs = charsets[this.charset]
           let len = parseInt(this.lengthStr)
-          for(var i = 0 ; i < len; i++) {
+          for (var i = 0; i < len; i++) {
             str += cs[Math.floor(Math.random() * cs.length)]
           }
           this.password = str
         },
-        copy: function() {
+        copy: function () {
           var copyText = document.querySelector("#pwd");
           copyText.select();
           document.execCommand("copy");
-          copyText.setSelectionRange(0,0)
+          copyText.setSelectionRange(0, 0)
+        },
+        onChange: function () {
+          this.generate()
         }
       }
-    })
+    }) 
   </script>
 </body>
+
 </html>
