--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <style>
     #pwd {
       border: none;
-      font-size: 16px
+      font-size: 16px;
+      font-family: monospace
     }
   </style>
 </head>
